--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@astrojs/mdx": "^3.1.9",
         "@astrojs/rss": "^4.0.9",
         "@astrojs/sitemap": "^3.2.1",
+        "@astrojs/vercel": "^7.8.2",
         "astro": "^4.16.13",
         "sass": "^1.81.0",
         "typescript": "^5.6.3"
