--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "dependencies": {
         "@astrojs/check": "^0.9.4",
         "@astrojs/mdx": "^3.1.9",
-        "@astrojs/node": "^8.3.4",
         "@astrojs/rss": "^4.0.9",
         "@astrojs/sitemap": "^3.2.1",
+        "@astrojs/vercel": "^7.8.2",
         "astro": "^4.16.13",
         "js-cookie": "^3.0.5",
         "sass": "^1.81.0",
